src/test/ui/lifetimes/lifetime-errors/ex2a-push-one-existing-name-2.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/ex2a-push-one-existing-name-2.rs:6:12
   |
LL | fn foo<'a>(x: Ref<i32>, y: &mut Vec<Ref<'a, i32>>) {
   |               -------- help: add explicit lifetime `'a` to the type of `x`: `Ref<'a, i32>`
LL |     y.push(x);
   |            ^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
